[FIXED] nuts search --json with bad formatting (closes #98) [FIXED] kw keyword will be printed as plain text without highlighting (closes #93) [FIXED] [NSH and other toolbox apps] Replace any relevant File/Path with NutsPath enhancement size-XL (closes #89) [FIXED] nuts info --json with bad formatting (closes #76) [FIXED] help --json is not working (closes #74)